--- a/HandMade.html
+++ b/HandMade.html
@@ -2,4 +2,8 @@
 <html>
     <p>Bài tập lớn cuối kì web.</p>
     <p>Web bán đồ handmade</p>
+    <p><head>hello web
+        
+
+    </head></p>
 </html>
