--- a/HandMade.html
+++ b/HandMade.html
@@ -2,8 +2,8 @@
 <html>
     <p>Bài tập lớn cuối kì web.</p>
     <p>Web bán đồ handmade</p>
-    <p><head>hello web
+    <p>VD
+        t đẩy thử lại
         
-
-    </head></p>
+    </p>
 </html>
