--- a/HandMade.html
+++ b/HandMade.html
@@ -2,8 +2,7 @@
 <html>
     <p>Bài tập lớn cuối kì web.</p>
     <p>Web bán đồ handmade</p>
-    <p>VD
-        t đẩy thử lại
-        
+    <p>
+        helllo
     </p>
 </html>
