--- a/HandMade.html
+++ b/HandMade.html
@@ -2,7 +2,5 @@
 <html>
     <p>Bài tập lớn cuối kì web.</p>
     <p>Web bán đồ handmade</p>
-    <p>
-        helllo
-    </p>
+    <p>Hello mọi người</p>
 </html>
