--- a/HandMade.html
+++ b/HandMade.html
@@ -2,5 +2,5 @@
 <html>
     <p>Bài tập lớn cuối kì web.</p>
     <p>Web bán đồ handmade</p>
-    <p>Hello mọi người</p>
+    <h1>Tôi là thanh tuyến</h1>
 </html>
