--- a/HandMadeIndex.html
+++ b/HandMadeIndex.html
@@ -1,6 +1,20 @@
 <!DOCTYPE html>
 <html>
-    <p>Bài tập lớn cuối kì web.</p>
-    <p>Web bán đồ handmade</p>
+
+<heah>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Web bán hàng handmade</title>
+    <link rel="stylesheet" href="style.css">
+</heah>
     
+<body>
+
+    <header>
+        <div class="boxtop"></div>
+        <div class="boxlogo"></div>
+        <div class="boxnav"></div>
+    </header>
+</body>
 </html>
