--- a/HandMadeIndex.html
+++ b/HandMadeIndex.html
@@ -6,15 +6,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web bán hàng handmade</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="header.css">
 </heah>
     
 <body>
 
     <header>
         <div class="boxtop"></div>
-        <div class="boxlogo"></div>
+        <div class="boxlogo">
+            <img src="D:\BaiTapHTML\Images\logo.png" alt="">
+        </div>
         <div class="boxnav"></div>
     </header>
+
+
 </body>
 </html>
