--- a/Trangchu.html
+++ b/Trangchu.html
@@ -27,9 +27,7 @@
 
 
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-
 </head>
-
 
 <body>  
 <!-- HEADER -->
@@ -178,8 +176,8 @@
     <!-- CONTENT 2: Sản Phẩm Bán Chạy -->
     <span class="lineleft"></span><span class="centerSpan"><i class="bi bi-handbag-fill"></i> SẢN PHẨM BÁN CHẠY</span><span class="lineright"></span><br>
 
-    <div class="main-img" data-aos="fade-left">
-        <div class="image-container2">
+    <div class="main-img">
+        <div class="image-container2" data-aos="flip-left"  data-aos-easing="ease-out-cubic" data-aos-duration="1000">
             <img src="https://i.pinimg.com/564x/64/98/38/64983895465aaf7544f73dbbd06e514f.jpg" class="square-img" alt="Image 1">
             <div class="image-content">
                 <h4>HOA HANDMADE</h4>
@@ -189,7 +187,7 @@
             </div>
         </div>
 
-        <div class="image-container2">
+        <div class="image-container2" data-aos="flip-left"  data-aos-easing="ease-out-cubic" data-aos-duration="1000">
             <img src="https://i.pinimg.com/564x/ae/db/99/aedb995d3bd4b48dbec306f50c8b5786.jpg" class="square-img" alt="Image 1">
             <div class="image-content">
                 <h4>GẤU HANDMADE</h4>
@@ -199,7 +197,7 @@
             </div>
         </div>
 
-        <div class="image-container2">
+        <div class="image-container2" data-aos="flip-left"  data-aos-easing="ease-out-cubic" data-aos-duration="1000">
             <img src="https://i.pinimg.com/564x/53/c3/c8/53c3c8382f73538f1504d71c0ebfb46e.jpg" class="square-img" alt="Image 1">
             <div class="image-content">
                 <h4>HOA HANDMADE</h4>
@@ -209,7 +207,7 @@
             </div>
         </div>
 
-        <div class="image-container2">
+        <div class="image-container2" data-aos="flip-left"  data-aos-easing="ease-out-cubic" data-aos-duration="1000">
             <img src="https://i.pinimg.com/564x/73/41/7d/73417d15f895ff3c21901727517c52c1.jpg" class="square-img" alt="Image 1">
             <div class="image-content">
                 <h4>THIỆP</h4>
@@ -403,7 +401,7 @@
                     <h4>VỀ CHÚNG TÔI</h4>
                     <p>Chúng tôi chuyên cung cấp các sản phẩm handmade chất lượng cao, mang đến sự sáng tạo và độc đáo cho khách hàng.</p>
                     <a href="Trangchu.html">
-                        <img src="D:\BaiTapHTML\Images\Logo.png" alt="Logo" class="logo">
+                        <img src="D:\BaiTapHTML\Images\Logo1.png" alt="Logo" class="logo">
                     </a>
                 </div>
               
