--- a/Trangchu.html
+++ b/Trangchu.html
@@ -96,7 +96,7 @@
                         <a href="blog.html">BLOG</a>
                     </li> 
                     <li>
-                        <a  href="lienhe.html">LIÊN HỆ</a>
+                        <a  href="Lienhe.html">LIÊN HỆ</a>
                     </li> 
                 </ul>
             </nav>
@@ -462,6 +462,7 @@
                 <button onclick="topFunction()" id="backToTopBtn" title="Go to top"><i class="bi bi-chevron-double-up"></i></button>
             </div>
         </div>
+
     </footer>
 
 
